[package]
name = "weightbtleplug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.10", features = ["serde"] }
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.4"